Fixed vertical alignment on images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+/* This didn't work as expected
 .space_even {
     justify-content: space-evenly;
+} */
+
+.vert-align {
+    display: flex;
+    align-items: center;
 }
